--- a/PySpark_Intro.ipynb
+++ b/PySpark_Intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO/uxqbUaLDQiGgP3jERuyG",
+      "authorship_tag": "ABX9TyOwmNzYvdWPPMQ40cfMbo36",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,18 +23,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/praveen311094/PySpark/blob/main/PySpark_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/praveen311094/PySpark/blob/Branch1/PySpark_Intro.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "cpQ5G6KMqytQ",
-        "outputId": "f1af47e8-0f4a-4763-9524-97195d21c950"
+        "outputId": "07ca3510-b6dc-41b5-8234-676514c7b85a"
       },
       "outputs": [
         {
@@ -44,14 +44,14 @@
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
             "Collecting pyspark\n",
             "  Downloading pyspark-3.3.1.tar.gz (281.4 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.4/281.4 MB\u001b[0m \u001b[31m4.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m281.4/281.4 MB\u001b[0m \u001b[31m5.2 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Collecting py4j==0.10.9.5\n",
             "  Downloading py4j-0.10.9.5-py2.py3-none-any.whl (199 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.7/199.7 KB\u001b[0m \u001b[31m18.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m199.7/199.7 KB\u001b[0m \u001b[31m19.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hBuilding wheels for collected packages: pyspark\n",
             "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=a042c63893d31ae850d47b790143138889b779f301cd004d44f96aaccc716073\n",
+            "  Created wheel for pyspark: filename=pyspark-3.3.1-py2.py3-none-any.whl size=281845512 sha256=c05e1ce2c87e44b8e470670e64c2e51e13dedde685ca58341870511c0e98e296\n",
             "  Stored in directory: /root/.cache/pip/wheels/43/dc/11/ec201cd671da62fa9c5cc77078235e40722170ceba231d7598\n",
             "Successfully built pyspark\n",
             "Installing collected packages: py4j, pyspark\n",
@@ -60,7 +60,7 @@
         }
       ],
       "source": [
-        "# pip install pyspark"
+        "pip install pyspark"
       ]
     },
     {
@@ -90,7 +90,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "kQibqfBgrZfR",
-        "outputId": "bf0f3b11-9209-477b-8523-075b7209ab8c"
+        "outputId": "bab3b21d-3b56-4f86-8e29-cf5f43942e69"
       },
       "execution_count": 5,
       "outputs": [
@@ -119,7 +119,7 @@
         "id": "IEhvvvjnsU21",
         "outputId": "78dc54ce-450f-41f6-b372-6ebd746c4047"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -146,7 +146,7 @@
         "id": "qUw4SI59sVAj",
         "outputId": "46ec6204-e464-4a49-9c0d-cdfbe317183a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -191,7 +191,7 @@
         "id": "1fgMRDSU1eKY",
         "outputId": "edaa301b-6e61-4b7c-99a1-658ce7e7d194"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
         "id": "y2ZkVsx34W1J",
         "outputId": "5739be83-dd36-42c8-c571-5f702c13d7db"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -268,7 +268,7 @@
         "id": "zgEaSG204gVp",
         "outputId": "07a7fd80-2a59-491a-a955-f798a45747bc"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -306,7 +306,7 @@
         "id": "50MyZfJy5742",
         "outputId": "6f0ce1b0-b80c-4ed4-fd47-ff23a9cf50dd"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -336,7 +336,7 @@
         "id": "lRRSGUjZ4311",
         "outputId": "70267bf0-b6a5-47a4-f7b9-8372dfd171c4"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -366,7 +366,7 @@
         "id": "5pfBpxXN43xp",
         "outputId": "0add8e00-1c22-475d-ee79-7051a1c34aa6"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -393,7 +393,7 @@
         "id": "AIBu6T0H6jgK",
         "outputId": "26271067-25da-4f50-912d-a3e003d53c46"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -502,7 +502,7 @@
         "id": "8MFz8rJc6jYx",
         "outputId": "6e9f20aa-bfc8-4a12-82ac-eda0d473d6b8"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -534,7 +534,7 @@
         "id": "Y4gcUNBd7ski",
         "outputId": "77c9aa01-65c1-40fe-faf4-0bb761749abd"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -560,7 +560,7 @@
       "metadata": {
         "id": "UbFyAaMhE0Zu"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -576,7 +576,7 @@
         "id": "SX6Yi5BCCHZi",
         "outputId": "e762e29a-cb1d-40b8-db45-a5e902d0e44d"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -603,7 +603,7 @@
         "id": "BcYIB_a4_auA",
         "outputId": "f17479f3-c385-4c2c-841d-b80b46e28d9d"
       },
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -637,7 +637,7 @@
         "id": "E199Tb7VCfXd",
         "outputId": "7db65a91-c1ad-4ac7-d1c3-cf972fdfd363"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +671,7 @@
         "id": "KahIsnpFJtme",
         "outputId": "4dc6e76c-69e3-47ec-bc32-811fb329b8b2"
       },
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -697,7 +697,7 @@
         "id": "8DXjgUcCLtXN",
         "outputId": "9b027c9b-dd2c-4567-be8f-54c9ab115662"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -723,7 +723,7 @@
         "id": "tkFWmlbML2L-",
         "outputId": "dd8da7d2-b791-4251-9b7f-8546d3543dc6"
       },
-      "execution_count": 63,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -751,7 +751,7 @@
         "id": "ll74VuBcMMEp",
         "outputId": "7a12b5f8-b9c9-409a-c4a4-acfb0262b87d"
       },
-      "execution_count": 64,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,7 +778,7 @@
         "id": "CfT360IsML_o",
         "outputId": "9000ddb6-4507-4a3d-b100-874be5135595"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -806,7 +806,7 @@
         "id": "RvkcQrYeRx9z",
         "outputId": "7122a93a-2db0-4035-ec5a-ec454c680d49"
       },
-      "execution_count": 70,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -822,9 +822,232 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "rdd2 = rdd1.map(lambda x:int(x.split(\",\")[1]))\n",
+        "rdd2.collect()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HMy4GRJ3O80P",
+        "outputId": "5ff2dd30-0600-4a81-cc80-91edd7b5e0bd"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[22, 22, 24, 24, 25, 26, 22, 22]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rdd2.min()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        },
+        "id": "B2l3QWEMQOww",
+        "outputId": "775115ae-83ec-4a82-ed49-cb6cae3f0bad"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'22'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# PYSPARK DAY-2 "
+      ],
+      "metadata": {
+        "id": "hMRddjxQsDbp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q. Find out most Aged people\n",
+        "rdd1 = sc.textFile(\"/content/test2.txt\").map(lambda y:int(y.split(\",\")[1]))\n",
+        "get_data = rdd1.map(lambda y:(y,1)).reduceByKey(lambda x,y:x+y)\n",
+        "get_data.take(1)"
+      ],
+      "metadata": {
+        "id": "WzUWHAVOSVKV",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "a2658edc-5f9e-4e55-81d1-111fff615ef1"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[(22, 6)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Q. Find which Gender is more in count.\n",
+        "rdd2 = sc.textFile(\"/content/test2.txt\").map(lambda y:y.split(\",\")[2])\n",
+        "get_data = rdd2.map(lambda y:(y,1)).reduceByKey(lambda x,y:x+y)\n",
+        "rs1 = get_data.sortBy(lambda x:x[1],False)\n",
+        "# get_data.sortBy(lambda x:x[1],False).take(1)\n",
+        "# get_data.take(1)\n",
+        "rs1.collect()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "iJ7qE-_rWMNa",
+        "outputId": "c1f72265-e0f4-4342-99d3-7f7ddf60f215"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('M', 7), ('F', 4)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 49
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rdd3 = sc.textFile(\"/content/test2.txt\").map(lambda y:y.split(\",\")[3])\n",
+        "get_data = rdd3.map(lambda y:(y,1)).reduceByKey(lambda x,y:x+y)\n",
+        "get_data.collect()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9SljTMxvWMJI",
+        "outputId": "c1953328-2a52-4903-e54b-3b7f776c15cd"
+      },
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('teacher', 4),\n",
+              " ('technician', 1),\n",
+              " ('painter', 1),\n",
+              " ('tutor', 1),\n",
+              " ('Singer', 2),\n",
+              " ('dancer', 2),\n",
+              " ('M', 7),\n",
+              " ('F', 4)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 51
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# To Find which profession is higher in male category:\n",
+        "rdd4 = sc.textFile(\"/content/test2.txt\").map(lambda y:y.split(\",\")).filter(lambda y:y[2] ==\"M\")\n",
+        "rdd_filtered = rdd4.map(lambda z:(z[3],1)).reduceByKey(lambda x,y:x+y).sortBy(lambda x:x[1],False)\n",
+        "rdd_filtered.take(1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "biMnKkLrchME",
+        "outputId": "fd7dec15-af23-4547-dbd8-c443dc4b64d6"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[('dancer', 3)]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "rdd_kv = sc.textFile(\"/content/test2.txt\").map(lambda x:x.split(\",\")).map(lambda y:(y[1]+y[2]))\n",
+        "rdd_kv1 = rdd_kv.map(lambda y:(y,1)).reduceByKey(lambda x,y:x+y).sortBy(lambda y:y[1],False)\n",
+        "final = rdd_kv1.map(lambda y:y[1]).max()\n",
+        "rdd_kv1.map(lambda y:y[1]).max() # to check max number\n",
+        "final_res = rdd_kv1.filter(lambda x:x[1] == final)  # filtering with max number \n",
+        "# rdd_kv1.collect()\n",
+        "# final_res.collect()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "fQuoVsBbgYkm",
+        "outputId": "2e2ab517-f135-465f-d4b4-b7570ece9266"
+      },
+      "execution_count": 114,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "3"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 114
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "WzUWHAVOSVKV"
+        "id": "3nabnQhrsZJL"
       },
       "execution_count": null,
       "outputs": []
